--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,43 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "plugins": ["@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
+  "rules": {
+    "quotes": ["error", "double"],
+    "no-console": "warn",
+    "no-alert": "warn",
+    "no-unused-vars": "warn",
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "warn",
+    "prefer-const": "error",
+    "no-const-assign": "error",
+    "no-dupe-keys": "error",
+    "no-duplicate-imports": "error",
+    "no-unreachable": "error",
+    "no-unreachable-loop": "error",
+    "no-use-before-define": "error",
+    "sort-vars": "warn",
+    "require-await": "error"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "ignorePatterns": [
+    "node_modules/",
+    ".next/",
+    ".out/",
+    "build/",
+    "coverage/",
+    "public/"
+    // Add any other files or directories to be ignored
+  ]
 }
