--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "bcrypt": "^5.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
