create components and handle routes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,11 +10,11 @@
     "quotes": ["error", "double"],
     "no-console": "warn",
     "no-alert": "warn",
-    "no-unused-vars": "off",
+    "no-unused-vars": "warn",
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "off",
     "@typescript-eslint/explicit-module-boundary-types": "warn",
     "prefer-const": "error",
     "no-const-assign": "error",
