--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "winston": "^3.11.0"
   },
   "devDependencies": {
